--- a/apps/camera/index.html
+++ b/apps/camera/index.html
@@ -32,6 +32,6 @@
     <link rel="stylesheet" type="text/css" href="style/main.css" />
   </head>
   <body>
-    <script src="js/startup.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
