--- a/apps/gallery/index.html
+++ b/apps/gallery/index.html
@@ -30,6 +30,10 @@
     <script defer src="shared/js/scroll_detector.js"></script>
     <script defer src="shared/js/media/downsample.js"></script>
 
+    <!-- Bower Components -->
+    <script defer src="/bower_components/gaia-component-utils/index.js"></script>
+    <script defer src="/bower_components/gaia-header/script.js"></script>
+
     <!-- This script is lazy loaded, but listed here so it gets packaged -->
     <!-- <script defer src="shared/js/media/crop_resize_rotate.js"></script> -->
 
@@ -55,6 +59,7 @@
     </section>
 
     <section role="region" id="thumbnail-select-view" class="skin-dark">
+      <gaia-header action="close"></gaia-header>
       <header id="thumbnails-select-top">
         <button id="thumbnails-cancel-button"><span class="icon icon-close"></span></button>
         <h1 id="thumbnails-number-selected"></h1>
